--- a/app/src/main/res/layout/activity_registration__step_2.xml
+++ b/app/src/main/res/layout/activity_registration__step_2.xml
@@ -28,13 +28,13 @@
         android:layout_marginTop="40dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+
         <LinearLayout
             android:fitsSystemWindows="true"
             android:foregroundGravity="center_vertical"
             android:gravity="center_vertical"
             android:layout_gravity="center_horizontal"
             android:layout_width="match_parent"
-
             android:layout_height="match_parent"
             android:orientation="vertical"
             >
@@ -52,7 +52,7 @@
                     android:layout_height="46dp"
                     android:layout_gravity="center_horizontal"
                     android:layout_marginTop="92dp"
-                    android:background="@drawable/bubble"
+                    android:background="@drawable/bubble1"
                     android:gravity="center_vertical"
                     android:hint="Name"
                     android:inputType="text"
@@ -67,7 +67,7 @@
                     android:layout_height="46dp"
                     android:layout_gravity="center_horizontal"
                     android:layout_marginTop="16dp"
-                    android:background="@drawable/bubble"
+                    android:background="@drawable/bubble1"
                     android:gravity="center_vertical"
                     android:hint="Mobile"
                     android:inputType="number"
@@ -82,7 +82,7 @@
                     android:layout_height="46dp"
                     android:layout_gravity="center_horizontal"
                     android:layout_marginTop="16dp"
-                    android:background="@drawable/bubble"
+                    android:background="@drawable/bubble1"
                     android:gravity="center_vertical"
                     android:hint="Email"
                     android:inputType="textEmailAddress"
@@ -98,7 +98,7 @@
                     android:layout_height="46dp"
                     android:layout_gravity="center_horizontal"
                     android:layout_marginTop="16dp"
-                    android:background="@drawable/bubble"
+                    android:background="@drawable/bubble1"
                     android:gravity="center_vertical"
                     android:hint="Password"
                     android:inputType="textPassword"
@@ -113,7 +113,7 @@
                     android:layout_height="46dp"
                     android:layout_gravity="center_horizontal"
                     android:layout_marginTop="16dp"
-                    android:background="@drawable/bubble"
+                    android:background="@drawable/bubble1"
                     android:gravity="center_vertical"
                     android:hint="Address"
                     android:inputType="textMultiLine"
@@ -142,7 +142,7 @@
                     android:layout_height="46dp"
                     android:layout_gravity="center_horizontal"
                     android:layout_marginTop="16dp"
-                    android:background="@drawable/bubble"
+                    android:background="@drawable/bubble1"
                     android:gravity="center_vertical"
                     android:hint="Company Name"
                     android:inputType="text"
@@ -153,10 +153,10 @@
 
                 <Button
                     android:id="@+id/nxbtn"
-                    android:layout_width="300dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="59dp"
                     android:layout_gravity="center_horizontal"
-                    android:layout_marginTop="16dp"
+                    android:layout_marginTop="50dp"
                     android:background="@drawable/bubble"
                     android:gravity="center_vertical"
                     android:hint="@string/confirm_password"
