--- a/app/src/main/res/layout/activity_profile_activty.xml
+++ b/app/src/main/res/layout/activity_profile_activty.xml
@@ -159,7 +159,7 @@
             android:id="@+id/main_layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            tools:context=".MainActivity">
+            tools:context="ics.dynamic.dgfab.MainActivity">
 
             <android.support.design.widget.TabLayout
                 android:id="@+id/tab_layout"
