--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,9 +8,9 @@
         android:layout_height="match_parent"
         android:background="#131A56"
         android:fitsSystemWindows="true"
-        tools:context="com.myhexaville.login.MainActivity">
+        tools:context="com.myhexaville.login.ics.dynamic.dgfab.MainActivity">
 
-        <com.myhexaville.login.FlexibleFrameLayout
+        <ics.dynamic.dgfab.FlexibleFrameLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:id="@+id/wrapper"
@@ -21,7 +21,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" />
 
-            <com.myhexaville.login.login.LoginButton
+            <ics.dynamic.dgfab.login.LoginButton
                 android:id="@+id/button"
                 android:layout_width="120dp"
                 android:layout_height="120dp"
@@ -31,7 +31,7 @@
                 android:id="@+id/login_fragment"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" />
-        </com.myhexaville.login.FlexibleFrameLayout>
+        </ics.dynamic.dgfab.FlexibleFrameLayout>
 
     </android.support.design.widget.CoordinatorLayout>
 </layout>
