--- a/app/src/main/res/layout/activity_registration__step_3.xml
+++ b/app/src/main/res/layout/activity_registration__step_3.xml
@@ -8,7 +8,7 @@
     android:background="@drawable/bg1"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Activities.LogandReg.Registration_Step_3">
+    tools:context="ics.dynamic.dgfab.LogandReg.Registration_Step_3">
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
