--- a/app/src/main/res/layout/activity_splash__dgfab.xml
+++ b/app/src/main/res/layout/activity_splash__dgfab.xml
@@ -7,7 +7,7 @@
     android:background="@drawable/bg1"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Splash_DGFAB">
+    tools:context="ics.dynamic.dgfab.Splash_DGFAB">
 
     <ImageView
         android:src="@drawable/logo"
