--- a/app/src/main/res/layout/content_navigation_buyer.xml
+++ b/app/src/main/res/layout/content_navigation_buyer.xml
@@ -7,7 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".Buyer_Main_Navigation">
+    tools:context="ics.dynamic.dgfab.Buyer_Main_Navigation">
     <FrameLayout
         android:id="@+id/content_frame"
         android:layout_width="match_parent"
