--- a/app/src/main/res/layout/fragment_signup.xml
+++ b/app/src/main/res/layout/fragment_signup.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/bg1"
-    tools:context="com.myhexaville.login.login.SignUpFragment">
+    tools:context="ics.dynamic.dgfab.login.SignUpFragment">
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
