--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,7 +24,7 @@
             <ics.dynamic.dgfab.login.LoginButton
                 android:id="@+id/button"
                 android:layout_width="120dp"
-                android:layout_height="120dp"
+                android:layout_height="100dp"
                 android:onClick="switchFragment" />
 
             <FrameLayout
@@ -32,6 +32,18 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" />
         </ics.dynamic.dgfab.FlexibleFrameLayout>
+
+        <TextView
+            android:id="@+id/tv_skip_login"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Skip"
+            android:textColor="#fff"
+            android:gravity="right"
+            android:layout_gravity="right"
+            android:layout_margin="15dp"
+            android:textSize="15dp"
+            />
 
     </android.support.design.widget.CoordinatorLayout>
 </layout>
