--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -6,6 +6,7 @@
     tools:context="ics.dynamic.dgfab.login.SignUpFragment">
 
     <EditText
+        android:text="rr@gmail.com"
         android:id="@+id/email"
         android:layout_width="300dp"
         android:layout_height="56dp"
@@ -20,6 +21,7 @@
         android:textColor="#ffffff" />
 
     <EditText
+        android:text="123456"
         android:id="@+id/password"
         android:layout_width="300dp"
         android:layout_height="56dp"
