--- a/app/src/main/res/layout/rowlayout.xml
+++ b/app/src/main/res/layout/rowlayout.xml
@@ -14,7 +14,9 @@
         android:layout_width="match_parent"
         android:layout_height="80dp" />
 
+
     <android.support.v7.widget.CardView
+        android:id="@+id/xyzcardv"
         android:layout_marginTop="30dp"
         app:cardCornerRadius="30dp"
         android:elevation="50dp"
@@ -36,5 +38,12 @@
         android:gravity = "center"
         android:textSize = "13sp"
         android:layout_height = "100dp" />
+        <CheckBox
+            android:id="@+id/namechk"
+            android:layout_gravity="end"
+            android:layout_marginTop="5dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
     </android.support.v7.widget.CardView>
+
 </RelativeLayout>
