--- a/app/src/main/res/drawable/bt_bg.xml
+++ b/app/src/main/res/drawable/bt_bg.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient
-        android:startColor="#fff"
-        android:centerColor="#fff"
-
+        android:startColor="#131A56"
+        android:centerColor="#131A56"
+        android:endColor="#131A56"
         android:angle="135"/>
-    <stroke android:color="@color/design_default_color_primary"
+    <stroke android:color="#131A56"
         android:width="0.5dp" />
-    <padding android:bottom="10dp" android:left="10dp" android:right="10dp" android:top="10dp" />
-    <corners android:radius="20dp" />
+    <padding android:bottom="10dp" android:left="10dp"
+        android:right="10dp" android:top="10dp" />
+    <corners android:radius="8dp" />
 </shape>
