--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@color/secondPage"
     tools:context="ics.dynamic.dgfab.login.SignUpFragment">
 
     <EditText
@@ -35,14 +36,15 @@
         android:hint="@string/password"
         android:textColor="#ffffff" />
     <Button
-        android:background="@null"
         android:layout_marginTop="30dp"
         android:padding="10dp"
         android:textColor="#ffffff"
         android:text="LOGIN"
         android:id="@+id/login"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
+        android:background="@drawable/bt_bg"
+        android:layout_width="300dp"
+        android:layout_gravity="center"
+        android:layout_height="59dp" >
 
 
     </Button>
